# cmailio

./: CMakeLists.txt  README.md  cmailio.pc.in  doxygen.conf  doxygen.conf.in  mailio.pc.in
examples/: CMakeLists.txt  imap_folders.cpp  imap_remove_msg.cpp  imaps_search.cpp  imaps_stat.cpp  message.cpp  pop3_remove_msg.cpp  pop3s_attachment.cpp  pop3s_fetch_one.cpp  smtp_utf8_qp_msg.cpp  smtps_attachment.cpp  smtps_simple_msg.cpp
include/: version.hpp.in
include/cmailio/: base64.hpp  binary.hpp  bit7.hpp  bit8.hpp  codec.hpp  dialog.hpp  imap.hpp  mailboxes.hpp  message.hpp  mime.hpp  pop3.hpp  q_codec.hpp  quoted_printable.hpp  smtp.hpp
src/: base64.cpp  binary.cpp  bit7.cpp  bit8.cpp  codec.cpp  dialog.cpp  imap.cpp  mailboxes.cpp  message.cpp  mime.cpp  pop3.cpp  q_codec.cpp  quoted_printable.cpp  smtp.cpp
test/: CMakeLists.txt  test_message.cpp
